--- a/src/index.css
+++ b/src/index.css
@@ -6,12 +6,11 @@ html,
 body {
   background-color: #000000;
   color: white;
-  font-family: 'Open Sans', sans-serif;
-
+  font-family: "Open Sans", sans-serif;
 }
 
-
-h1,h3 {
+h1,
+h3 {
   @apply text-3xl font-bold mb-4;
 }
 
@@ -31,7 +30,6 @@ em {
   @apply italic text-pink-500;
 }
 
-
 .btn-primary {
   @apply bg-indigo-500 text-white font-bold py-2 px-4 rounded-xl hover:bg-indigo-700 transition-all duration-200 ease-in-out;
 }
@@ -45,14 +43,17 @@ em {
 }
 
 .chat-messages {
-  @apply flex flex-col h-full overflow-x-auto mb-4 overflow-scroll;
+  @apply flex flex-col h-full overflow-x-hidden mb-4 overflow-scroll;
 }
 
-
 /* Animations */
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
 
 .fade-in {
-  animation: fadeIn .3s;
+  animation: fadeIn 0.3s;
 }
 
 @keyframes fadeIn {
